<resources>
    <string name="app_name">番茄邮件</string>
    <string name="author">纯情小腊鸭出品</string>

    <string name="menu_send">已发送</string>
    <string name="menu_flag">加星</string>
    <string name="menu_pending">定时发送</string>
    <string name="menu_contacts">联系人</string>
    <string name="menu_other">其它</string>
    <string name="menu_setting">Q＆A</string>
    <string name="menu_about">关于</string>
    <string name="menu_clock_tip">设置定时发送</string>
    <string name="menu_attach_tip">添加附件</string>
    <string name="menu_send_tip">发送</string>
    <string name="menu_star">加星</string>
    <string name="menu_delete">删除邮件</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="dialog_choose_avatar">选择头像</string>
    <string name="dialog_choose_avatar_gallery">图库</string>
    <string name="dialog_choose_avatar_camera">拍照</string>
    <string name="dialog_choose_avatar_camera_refuse">你拒绝了打开相机的权限，请到设置中修改</string>
    <string name="dialog_choose_avatar_save_avatar_fail">对不起，图片保存失败</string>
    <string name="dialog_choose_avatar_sdcard_not_found">SD卡不存在</string>
    <string name="dialog_cancel_email_tip">放弃编写邮件？</string>
    <string name="dialog_delete_email_tip">删除该邮件？</string>
    <string name="dialog_delete_contact_tip">删除该联系人？</string>
    <string name="dialog_delete_and_cancel_email_tip">删除并取消发送该邮件？</string>

    <string name="activity_user_info_setting_tip">输入您的邮箱地址</string>
    <string name="user_name_hint">您的163邮箱地址</string>
    <string name="password_hint">您的邮箱密码</string>

    <string name="new_letter_activity_hint_email_to">收件人</string>
    <string name="new_letter_activity_hint_subject">主题</string>
    <string name="new_letter_activity_hint_say_something">说点什么</string>
    <string name="new_letter_activity_sending_dialog_tip">发送中..</string>

    <string name="notification_tip_success">邮件发送成功</string>
    <string name="notification_tip_fail_not_net">检测到无网络，邮件发送失败</string>
    <string name="notification_tip_fail">邮件发送失败</string>
    <string name="notification_tip_fail_email_empty">获取邮件内容为空，邮件发送失败</string>

    <string name="email_detail_activity_attach">附件:</string>

    <string name="toast_email_empty">邮箱不能为空</string>
    <string name="toast_email_empty_subject">主题不能为空</string>
    <string name="toast_email_format_invalid">邮箱不符合规范</string>
    <string name="toast_email_password_not_empty">密码不能为空</string>
    <string name="toast_email_not_163">请输入163邮箱</string>
    <string name="toast_email_network_un_available">当前网络不可用</string>
    <string name="toast_email_send_success">邮件发送成功</string>
    <string name="toast_email_send_fail">邮件发送失败，请检查163邮箱账户密码是否正确</string>
    <string name="toast_email_choose_time_fail">定时邮件时间必须大于当前时间</string>
    <string name="toast_email_choose_time_again">定时邮件时间必须大于当前时间，请重新选择发送时间</string>

    <string name="action_bar_text_about">关于</string>
    <string name="action_bar_text_question">Q＆A</string>
    <string name="action_bar_text_modify_account">修改账户</string>
    <string name="action_bar_text_set_account">设置账户</string>

    <string name="empty_view_tip_no_send">没有已发送的邮件</string>
    <string name="empty_view_tip_no_star">没有加星的邮件</string>
    <string name="empty_view_tip_no_pending">没有要发送的邮件</string>
    <string name="empty_view_tip_no_contact">没有联系人</string>


</resources>
