<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etEmailTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:background="@null"
            android:hint="@string/new_letter_activity_hint_email_to"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:paddingTop="12dip"
            android:textColorHint="@color/newL_text_color"
            android:textCursorDrawable="@null"
            android:textSize="13sp"/>

        <View
            style="@style/list_view_line"
            />

        <RelativeLayout
            android:id="@+id/rlAttach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/llAttach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


            </LinearLayout>

            <View
                style="@style/list_view_line"
                android:layout_below="@+id/llAttach"
                />

        </RelativeLayout>

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:background="@null"
            android:hint="@string/new_letter_activity_hint_subject"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:paddingTop="12dip"
            android:textColorHint="@color/newM_text_color"
            android:textCursorDrawable="@null"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/new_letter_activity_hint_say_something"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:paddingTop="12dip"
            android:textColorHint="@color/newM_text_color"
            android:textCursorDrawable="@null"
            android:textSize="13sp"/>

    </LinearLayout>
</ScrollView>